apps/quiz/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-ingress
  namespace: quiz
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: quiz.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - quiz.amer.dev
      secretName: quiz-amer-dev-tls
  rules:
    - host: quiz.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quiz-frontend
                port:
                  number: 80
